--- a/abcd.html
+++ b/abcd.html
@@ -6,7 +6,7 @@
 <body>
 <h1>DISHNA EVENTS</h1>
 
-<form action=""method"">
+<form action="method">
 
 <label for="Name">Name</label>
 
@@ -47,5 +47,7 @@
 </script>
 <input type="submit" value="submit">
 </form>
+
+<p> Hello world </p>
 </body>
 </html>
