--- a/abcd.html
+++ b/abcd.html
@@ -45,9 +45,11 @@
     reader.readAsDataURL(event.target.files[0]);
   };
 </script>
+
 <input type="submit" value="submit">
 </form>
 
+<p> Hello world </p>
 <p> Hello world </p>
 </body>
 </html>
